Fixed spacing UI of Home page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -295,11 +295,30 @@ aside p {
   width:100%;
   height:80vh;
   display: flex;
- 
-  align-items: center;
   flex-direction:column;
+  align-items: flex-start;
+  justify-content: center;
 }
 
+.search_results{
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  align-self: flex-start;
+  margin-left: 2rem;
+  padding-bottom: 0.5rem;
+
+}
+
+.recent {
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  color: white;
+  margin-left: 2rem;
+  padding-bottom: 0.5rem;
+  padding-top: 2rem;
+}
 /*============================================= Section3 ==================================================*/
 
 .section3 {
